# multimodal-agentic-expense-claim-kit

./: .env.example  .env.local  .gitignore  Dockerfile  ExpenseAI_Final_Deck.pptx  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tailwind.config.js
.chainlit/: config.toml
.claude/: CLAUDE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.playwright-mcp/: page-2026-04-01T16-24-43-606Z.yml  page-2026-04-01T16-24-57-820Z.yml  page-2026-04-01T16-25-41-393Z.yml  page-2026-04-01T16-28-02-805Z.yml  page-2026-04-01T16-28-14-201Z.yml  page-2026-04-01T16-28-19-811Z.yml  page-2026-04-01T16-28-50-084Z.yml  page-2026-04-02T08-21-08-787Z.yml  page-2026-04-02T08-21-21-998Z.yml  page-2026-04-02T08-21-33-002Z.yml  page-2026-04-02T08-21-45-781Z.yml  page-2026-04-02T14-02-56-740Z.yml  page-2026-04-02T14-08-09-225Z.yml  page-2026-04-02T14-08-40-210Z.yml  page-2026-04-02T14-09-20-384Z.yml  page-2026-04-02T14-10-01-302Z.yml  page-2026-04-02T14-23-21-367Z.yml  page-2026-04-02T14-24-05-831Z.yml  page-2026-04-02T14-24-48-911Z.yml  page-2026-04-02T14-26-38-633Z.yml  page-2026-04-02T14-27-22-870Z.yml  page-2026-04-02T14-29-13-709Z.yml  page-2026-04-02T14-30-22-207Z.yml  page-2026-04-02T14-31-00-407Z.yml  page-2026-04-02T14-31-47-500Z.yml  page-2026-04-02T14-32-59-654Z.yml  page-2026-04-02T14-33-59-978Z.yml  page-2026-04-02T14-35-04-870Z.yml  page-2026-04-02T15-56-58-989Z.yml  page-2026-04-02T15-57-38-612Z.yml  page-2026-04-02T15-58-23-116Z.yml  page-2026-04-02T15-59-23-058Z.yml  page-2026-04-02T15-59-59-242Z.yml  page-2026-04-02T16-00-24-542Z.yml  page-2026-04-02T16-00-59-362Z.yml  page-2026-04-02T16-03-27-640Z.yml  page-2026-04-02T16-03-54-506Z.yml  page-2026-04-02T16-04-05-395Z.yml  page-2026-04-02T16-04-40-149Z.yml  page-2026-04-02T16-05-30-362Z.yml  (+58 more)
alembic/: env.py
docs/: deep-research-langgraph-react-node.md  deep-research-report.md  deep-research-systemprompt-chat-agent.md  deepeval-integration.md  project-context.md
eval/: BENCHMARKS.xlsx  run_eval.py
project-reports/: Group 8 GenAI-Project-Proposal-Agentic-Expense-Claims V1.0 (Template 1).docx  agent-architecture-v2.excalidraw  agent-architecture-v3.excalidraw  agent-architecture.excalidraw  proposal-outline.docx  proposal.tex  references.bib  temp-doc.md 17-29-52-040.md
public/: custom.css
scripts/: ingest_policies.py  startup.sh
templates/: analytics.html  audit.html  base.html  chat.html  dashboard.html  login.html  manage.html  review.html  review_v2.html
tests/: .env.test  __init__.py  conftest.py  test_advisor_agent.py  test_audit.py  test_auth.py  test_browser_e2e_intake_gpt.py  test_chat_auto_reset_queue_rebind.py  test_chat_page.py  test_chat_ui_interrupt_cleanup.py  test_compliance_agent.py  test_dashboard.py  test_database.py  test_e2e_intake_narrative.py  test_employee_id_extractor.py  test_extract_receipt_fields.py  test_fraud_agent.py  test_graph.py  test_image_quality.py  test_intake_agent.py  test_intake_audit_logging.py  test_intake_e2e_vnd.py  test_intake_gpt.py  test_intake_gpt_web.py  test_intake_hooks.py  test_intake_tools.py  test_intake_trace_reconstruction.py  (+19 more)
(+397 files in other folders)
