[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-claims"
version = "0.1.0"
description = "Multi-agent multimodal expense claims processing system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",
    "chainlit>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_claims"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
