[tool.poetry]
name = "agentic-claims"
version = "0.1.0"
description = "Multi-agent multimodal expense claims processing system"
authors = []
packages = [{include = "agentic_claims", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
langgraph = ">=0.4"
langgraph-checkpoint-postgres = ">=2.0"
chainlit = ">=2.0"
pydantic-settings = ">=2.0"
psycopg = {version = ">=3.0", extras = ["binary"]}
python-dotenv = ">=1.0"
alembic = ">=1.18"
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
openai = ">=1.0"
sentence-transformers = ">=2.2"
qdrant-client = ">=1.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-cov = ">=6.0"
ruff = ">=0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
